# inproc_miner

./: CMakeLists.txt  Makefile  README.md
hashes/: CMakeLists.txt  cryptonight.c  oaes_lib.c  oaes_lib.h
miner_test/: CMakeLists.txt  miner_test.cpp
minerlib/: CMakeLists.txt  cpu_load.cpp  cpu_load.h  cryptonight.cpp  hex_string.cpp  miner_pool.cpp  miner_pool.h  reply_parser.cpp  stratum_client.cpp  stratum_client.h
py_wrapper/: CMakeLists.txt  stratum_py_wrapper.cpp  test.py
